# IKDeformableBody

./: .gitattributes  README.md  requirements.txt
examples/: S011_markerset.yaml  S011_skel.pkl  S011_walking01.trc  S015_markerset.yaml  S015_skel.pkl
pkl2json/: pkl2json.py
pyd/: README.md
pyd/scan2smpl_pyd/: README.md
pyd/scan2smpl_pyd/female/: CMakeLists.txt  Environment.hpp  runner.py  smpl.h
pyd/scan2smpl_pyd/male/: CMakeLists.txt  Environment.hpp  RaisimGymEnv.hpp  VectorizedEnvironment.hpp  build.bat  kdtree.h  smpl.cpp
pyd/smpl4marker_pyd/: README.md
pyd/smpl4marker_pyd/female/: CMakeLists.txt  Environment.hpp  VectorizedEnvironment.hpp  build.bat
pyd/smpl4marker_pyd/male/: CMakeLists.txt  Environment.hpp  RaisimGymEnv.hpp  kdtree.cpp  raisim_gym.cpp  runner.py  smpl.cpp
pyd/trc2skel_pyd/: README.md
pyd/trc2skel_pyd/female/: CMakeLists.txt  Environment.hpp  VectorizedEnvironment.hpp  raisim_gym.cpp  skel.h
pyd/trc2skel_pyd/male/: CMakeLists.txt  Environment.hpp  RaisimGymEnv.hpp  RaisimGymVecEnv.py  cfg.yaml  joints_def.cpp  joints_def.h  osim_joints.cpp  osim_joints.h  runner.py  skel.cpp  vnormal.cpp  vnormal.h
scan2smpl/: OBJdistance.py  README.md  RaisimGymVecEnv.py  cfg.yaml  scan2smpl.py
smpl4marker/: README.md  RaisimGymVecEnv.py  index_visual.py  smpl4marker.py
trc2skel/: README.md  cfg.yaml  skel2kinematics.py  trc2skel_pyd.py
